--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
 .App {
-  text-align: center;
+  background: url('https://images.pexels.com/photos/1563356/pexels-photo-1563356.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260') no-repeat center center fixed;
+  background-size: cover;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav {
+height: 40px;
+color: white;
+padding-top: 20px;
+display: flex;
+justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.menulink {
+text-decoration: none;
+color: rgb(60, 60, 60);
+font-size: 20px;
+text-transform: uppercase;
+font-weight: 800;
+border: 1px solid white;
+margin: 30px;
+height: 40px;
+width: 160px;
+text-align: center;
+background-color: rgb(255, 255, 255, 0.4);
+border-radius: 10px;
+padding-top: 16px;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.linkwrapper:hover {
+background-color: rgb(255, 255, 255, 0.7);;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.selected {
+background-color: white;
 }
